--- a/index.css
+++ b/index.css
@@ -1,13 +1,15 @@
-body{
-    background-color: #1b1919;
-    font-family: "Audiowide", sans-serif;
+body {
+  background-color: #1b1919;
+  font-family: "Audiowide", sans-serif;
 }
 
-html, body {
-  overflow-x: hidden; /* Evita el scroll horizontal */
-
+html,
+body {
+  overflow-x: hidden;
+  /* Evita el scroll horizontal */
+  width: 100%;
+  max-width: 100vw;
 }
-
 
 /* ======== HEADER GENERAL ======== */
 .nav {
@@ -111,8 +113,6 @@ html, body {
 }
 
 
-
-
 /*Secciones*/
 
 section {
@@ -183,7 +183,7 @@ section {
 }
 
 .role h1 {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
   color: white;
   margin-bottom: 20px;
 }
@@ -198,14 +198,14 @@ section {
 
 /* Iconos y títulos */
 .role-item a {
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-decoration: none;
-    color: white;
-    transition: 0.3s ease;
-    padding-left: 20px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  transition: 0.3s ease;
+  padding-left: 20px;
 }
 
 .role-item a i {
@@ -411,7 +411,7 @@ section {
 
   .admin-view-images {
     width: 100%;
-    height: 260px;
+    height: auto;
   }
 
   .view-image {
@@ -646,12 +646,15 @@ section {
 .footer-brand {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centra horizontalmente */
-  text-align: center; /* Centra el texto */
+  align-items: center;
+  /* Centra horizontalmente */
+  text-align: center;
+  /* Centra el texto */
 }
 
 .footer-brand img {
-  width: 50%; /* Ajusta según el tamaño que prefieras */
+  width: 50%;
+  /* Ajusta según el tamaño que prefieras */
   margin-bottom: 10px;
   filter: drop-shadow(0 0 10px rgba(0, 191, 255, 0.4));
 }
